make search to Post model
